feat: add categories